--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,17 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12101.32445428285!2d-73.98232080951394!3d40.68870473876703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25bb6d2f3f01f%3A0xbe7b4d1d50acf454!2sFort+Greene%2C+Brooklyn%2C+NY!5e0!3m2!1sen!2sus!4v1466776562142" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!-- contact form -->
-
+    <form action="#" method="post">
+      <label for="fullname">Name</label>
+      <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="your email" required>
+      <label for="phone">Phone</label>
+      <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+      <label for="message">Message</label>
+      <textarea name="message" id="message" rows="10"></textarea>
+      <input type="submit" value="send">
+    </form>
 
 </body>
 </html>
