--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,20 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d719093.3805058739!2d-75.80025685000001!3d45.2486316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1466734595020" width="400" height="400" frameborder="0" style="border:0" allowfullscreen>"></iframe>
+
+  <!-- contact form -->
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email"> Email </label>
+    <input type="email" id="email" placeholder="your email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"> </textarea>
+    <input type="submit" value="send">
+  </form>
+
 </body>
 </html>
