--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <!-- Map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6049.776401274699!2d-73.99133202707496!3d40.69845982919781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1474570487607" width="435" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <!-- Contact Form --> 
 </body>
 </html>
