--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <!--Map-->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6050.216229092235!2d-73.9992607!3d40.6936165!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1474954345272" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <!--Contact Form-->
 </body>
 </html>
